test/e2e/testdata/backend-tls-clustertrustbundle.yaml
# keep this same as configmap backend-tls-ca
apiVersion: certificates.k8s.io/v1beta1
kind: ClusterTrustBundle
metadata:
  name: backend-tls-ca
spec:
  trustBundle: |
    -----BEGIN CERTIFICATE-----
    MIIDQzCCAiugAwIBAgIBATANBgkqhkiG9w0BAQsFADBCMRMwEQYDVQQKEwpFbnZv
[...]
    S5EAolzVv0yB7wHCWCgfG/ckdOTUNnE=
    -----END CERTIFICATE-----
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-backend-tls-trust-bundle
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: all-namespaces
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cluster-trust-bundle
      backendRefs:
        - name: backend-trust-bundle
          group: gateway.envoyproxy.io
          kind: Backend
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-trust-bundle
  namespace: gateway-conformance-infra
spec:
  endpoints:
    - fqdn:
        hostname: tls-backend-2.gateway-conformance-infra.svc.cluster.local
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: policy-cluster-trust-bundle
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-trust-bundle
  validation:
    caCertificateRefs:
      - name: backend-tls-ca
        group: ""
        kind: ClusterTrustBundle
    hostname: example.com
---
